Updating footer alignments on breakpoints and mobile menu item fix.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,6 +13,21 @@ body, p {
     font-weight: 700;
 }
 
+.navbar-light .navbar-nav .nav-link {
+    color: rgba(255, 255, 255, 1);
+    text-shadow: 0 0 0.25em black;
+    -webkit-transition: 0.2s;
+    -moz-transition: 0.2s;
+    transition: 0.2s;
+}
+
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:active  {
+    color: #e3a825;
+    text-shadow: 0 0 0.25em black;
+}
+
 .phone {
     background-image: url("../icons/icon-phone-white.svg");
     background-position: 0 50%;
