--- a/assets/css/grayscale.css
+++ b/assets/css/grayscale.css
@@ -5,6 +5,10 @@
  */
  @charset "UTF-8";
 
+.footer-text {
+  font-size: 0.75rem;
+}
+
 .navbar-img {
   width: 125px;
 }
@@ -102,8 +106,8 @@
   position: relative;
   width: 100%;
   height: auto;
-  min-height: 35rem;
-  padding: 15rem 0;
+  min-height: 25rem;
+  padding: 10rem 0;
   background: linear-gradient(to bottom, rgba(22, 22, 22, 0.5) 0%, rgba(22, 22, 22, 0) 75%, #050505 100%), url("../img/banner/highlights-of-vietnam.webp");
   clip-path: polygon(
     0 0,
@@ -127,8 +131,8 @@
   position: relative;
   width: 100%;
   height: auto;
-  min-height: 35rem;
-  padding: 15rem 0;
+  min-height: 25rem;
+  padding: 10rem 0;
   background: linear-gradient(to bottom, rgba(22, 22, 22, 0.5) 0%, rgba(22, 22, 22, 0) 75%, #050505 100%), url("../img/banner/highlights-of-vietnam.jpg");
   clip-path: polygon(
     0 0,
@@ -278,24 +282,6 @@
 
 .contact-section {
   padding: 5rem 0 0;
-}
-
-.contact-section .card {
-  border: 0;
-  border-bottom: 0.25rem solid #FF6442;
-}
-
-.contact-section .card h4 {
-  font-size: 0.8rem;
-  font-family: 'Brandon Grotesque';
-  text-transform: uppercase;
-  letter-spacing: 0.15rem;
-}
-
-.contact-section .card hr {
-  border-color: #FF6442;
-  border-width: 0.25rem;
-  width: 3rem;
 }
 
 /* .contact-section .social {
